--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,5 +3,6 @@ liuchengxu:
   url: https://github.com/liuchengxu
   image_url: https://github.com/liuchengxu.png
   page: true
+  title: Subcoin Builder
   socials:
     github: liuchengxu
